extends Control



func _on_Start_button_up():
	get_tree().change_scene("res://Scenes/Main.tscn") # Replace with function body.


func _on_Settings_button_up():
	get_tree().change_scene("res://Scenes/Settings.tscn") # Replace with function body.


func _on_Quit_button_up():
	get_tree().quit() # Replace with function body.
